--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <meta name="twitter:url" content="https://allbastards.com/" />
     <meta name="twitter:image" content="https://allbastards.com/allbastards-card.png" />
     <meta name="twitter:creator" content="@RoscoKalis" />
+
+    <!-- SimpleAnaytics events -->
+    <script>window.sa_event=window.sa_event||function(){var a=[].slice.call(arguments);window.sa_event.q?window.sa_event.q.push(a):window.sa_event.q=[a]};</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
